module(
    name = "numactl",
    version = "2.0.19",
)

bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "toolchains_llvm", version = "1.2.0")
#https://github.com/bazel-contrib/toolchains_llvm/issues/243
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency=True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")